<resources>
    <string name="app_name">House Scout</string>
    <string name="logoDesc">Logo</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="passwordHint2">Confirm Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="registrationButton">REGISTER</string>
    <string name="registrationText">Registration</string>
    <string name="ExampleLocation">Example Location</string>
    <string name="example_price">Example Price</string>
    <string name="next">Next</string>
    <string name="zipcode">Zipcode:</string>
    <string name="price">Price ($):</string>
    <string name="your_salary">Your Salary:</string>
    <string name="search_details">Search Details</string>
    <string name="housesrc">houseSrc</string>
    <string name="nextbutton">nextButton</string>
    <string name="settings">Settings</string>
    <string name="best_matches">Best Matches</string>
    <string name="example_metric">Example Metric</string>
    <string name="example_commute">Example Commute</string>
    <string name="example_median_income">Example Median Income</string>
    <string name="example_unemployment_rate">Example Unemployment Rate</string>
    <string name="about_this_area">About This Area</string>
</resources>