<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrationToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/darkGreen"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ZipcodeSearch"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/white"
        android:hint="@string/zipcode"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/price"
        android:backgroundTint="@color/white"
        android:hint="@string/price"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ZipcodeSearch" />

    <EditText
        android:id="@+id/salary"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/your_salary"
        android:autofillHints="@string/your_salary"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/UserSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="settings"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ZipcodeSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationToolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>